syntax = "proto3";

message SalesReport {
  string store = 1;
  string dept = 2;
  string timestamp = 3;
  float Weekly_Sales = 4;
  bool IsHoliday = 5;
}



